# hisse-analizi-dashboard

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  Dockerfile  OPTIMIZATIONS.md  PROJE_OZETI.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agent/workflows/: coding-style.md
alembic/: env.py
alembic/versions/: 001_full_schema_v1.py  002_add_notification_dedup_constraint.py  57057114dca3_fix_enums_for_financial_and_nlp.py  9517464de7c8_add_financial_statements_table.py  af3fa5dda037_initial_tables.py  b68da92264cf_add_category_to_normalized_events.py  f67938132e2d_initial_consolidated_migration.py
dashboard/: Dockerfile  package-lock.json  package.json
docs/: api-rehberi.md  katki-rehberi.md  mimari.md  yol-haritasi.md
scripts/: backfill_classification.py  debug_financials.py  manual_poll.py  reset_polling.py  seed.py
src/adapters/: anadoluefes_ir.py  anadoluefes_news.py  base.py  financial_adapter.py  financials.py  fundamentals.py  index_adapter.py  kap.py  macro.py  official_ir.py  official_news.py  price.py  scanner_adapter.py  screener_adapter.py  search_adapter.py  stream_adapter.py  technical.py  twitter_adapter.py  utils.py
src/api/: app.py  dependencies.py  routers.py  routers_extended.py  routers_fundamentals.py  routers_macro.py  routers_market.py  routers_technical.py
src/core/: __init__.py  config.py  enums.py  logging.py  time.py
src/db/: models.py  models_extended.py  repository.py  session.py
src/parsers/: helpers.py
src/schemas/: events.py
src/services/: analysis_service.py  (+2 more)
tests/: conftest.py
(+67 files in other folders)
